[package]
name = "pty_closure"
version = "0.1.2"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/pty_closure/latest/pty_closure"
repository = "https://github.com/Shadow53/pty-closure-rs"
description = "Run functions and closures in a pseudoterminal"
categories = [
    "development-tools",
    "development-tools::testing",
]
tags = [
    "pseudoterminal",
    "unix",
    "utility",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.23"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.3"
